--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace "com.mnov23.Gestures"
-    compileSdk 29
+    compileSdk 34  // compiling for sdk 34
 
     defaultConfig {
         applicationId "com.mnov23.Gestures"
-        minSdk 23
-        targetSdk 29
+        minSdk 21
+        targetSdk 29  // targeting sdk 29, as intended
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
